<resources>
    <string name="app_name">KLIFORA</string>
    <string name="app_name_slash">Klifora\nDiamonds</string>
    <string name="google_maps_key"
        templateMergeStrategy="preserve"
        translatable="false">AIzaSyBVy1OcP5R0trBNuXiGF42iE-lvFcWzLBs</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="Continue">Continue</string>
    <string name="ok">OK</string>
    <string name="required_permissions">Please allow all required permissions?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="meta_tag_menu_button_state">key</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="request_permission">Storage permission is required to get the videos from storage.</string>
    <string name="request_storage_permission">Request Storage Permission</string>
    <string name="image_to_show_play_icon">Image to show play icon.</string>
    <string name="permission_granted">Permission has been granted by user</string>
    <string name="permission_denied">Permission to read storage denied</string>
    <string name="video_path1">asset:///dummy_video.mp4</string>
    <string name="video_path2">/storage/emulated/0/snaptube/download/SnapTube Video/OpMs_ Corazon on Instagram_ _please fallow me if y(MP4).mp4</string>
    <string name="video_path3">/storage/emulated/0/snaptube/download/SnapTube Video/Facebook undefined(480p)_1.mp4</string>
    <string name="video_path4">http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4</string>
    <string name="video_path5">/storage/emulated/0/snaptube/download/SnapTube Video/THE INDIAN SARCASM®️ on Instagram_ _------------__(MP4).mp4</string>
    <string name="video_path6">/storage/emulated/0/snaptube/download/SnapTube Video/Facebook 1743407759166692(270p).mp4</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="strike__through_text">₹ <strike>13,000</strike></string>
    <string name="cart">Cart</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="clear_all">Clear All</string>
    <string name="apply_sort">APPLY SORT</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="delete">Delete</string>
    <string name="make_payment">Make Payment</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="content_des">PDF PAGE</string>
    <string name="pdfView_page_no">%1$d of %2$d</string>
    <string name="error_pdf_corrupted">Pdf has been corrupted or failed to load. Would you like to retry?</string>
    <string name="error_no_internet_connection">No Internet Connection. Please Check your internet connection.</string>
    <string name="file_saved_successfully">File saved successfully</string>
    <string name="file_saved_to_downloads">File saved to Downloads</string>
    <string name="file_not_downloaded_yet">File not downloaded yet</string>
    <string name="permission_required">Storage permission is required to download the file. Would you like to grant permission?</string>
    <string name="permission_required_title">Permission required</string>
    <string name="pdf_viewer_error">Error</string>
    <string name="pdf_viewer_retry">Retry</string>
    <string name="pdf_viewer_grant">Grant</string>
    <string name="pdf_viewer_cancel">Cancel</string>
    <string name="view_details">View Details</string>
    <string name="sizes">Sizes</string>
    <string name="ring_size_guide">Size Guide</string>
    <string name="apply">APPLY</string>
    <string name="clear">Clear</string>
    <string name="shop_for">Shop For</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="order_summary">Order Summary</string>
    <string name="price_breakup">Price Breakup</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="place_order">Place Order</string>
    <string name="proceed">Proceed</string>
    <string name="select_franchise">Select Franchise</string>
    <string name="billing_details">Billing Details</string>
    <string name="profile_details">Profile Details</string>
    <string name="first_nameStar">First Name*</string>
    <string name="last_nameStar">Last Name*</string>
    <string name="app_version_1_0">Version %s</string>
    <string name="search_by_product">Search By Product</string>
    <string name="search_by_sku">Search By SKU</string>
    <string name="are_your_sure_want_to_logout">Are you sure, You want to Logout?</string>
    <string name="are_your_sure_want_to_delete">Are you sure, You want to Delete?</string>
    <string name="sessionExpired">Session Expired</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="complaints_feedback">Complaints/Feedback</string>
    <string name="orders">Orders</string>
    <string name="place_order_with_franchise">Place order with Franchise</string>
    <string name="text"><![CDATA[<table><tr><th bgcolor= #FF0000>some text</th></tr> <tr><td bgcolor= #FF0000> some text</td></tr>]]></string>
    <string name="login_here">Login Here</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="request_otp">Request OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="franchise">Franchise</string>
    <string name="customer">Customer</string>
    <string name="welcome_to_shimmer">Welcome To Klifora</string>
    <string name="please_identify_yourself">Please Identify Yourself</string>
    <string name="type_here_to_search">Type here to search</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="faqs">FAQs</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="remove">Remove</string>
    <string name="cart_details">Cart Details</string>
    <string name="checkout">Checkout</string>
    <string name="all_products">All Products</string>
    <string name="enter_franchise_code">Enter Franchise Code</string>
    <string name="home">Home</string>
    <string name="thank_you">Thank You!</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="search_for_your_nearest_franchise">Search For Your Nearest Franchise</string>
    <string name="search_your_order">Search Your Order</string>
    <string name="order_history">Order History</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="search_mobile_no_name">Search Mobile NO/Name</string>
    <string name="order_details">Order Details</string>
    <string name="old_password">Old Password</string>
    <string name="no_item_available">No Item Available</string>
    <string name="default_lat">00.000000</string>
    <string name="default_lng">00.000000</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="search_order">Search Order</string>
    <string name="enterOrderNumber">Enter Order Number</string>
    <string name="EnterOldPassword">Enter Old Password</string>
    <string name="InvalidPassword">*Minimum 8 characters containing 1 Uppercase, 1 Lowercase, 1 Number &amp; 1 Special Character</string>
    <string name="EnterNewPassword">Enter New Password</string>
    <string name="EnterConfirmNewPassword">Enter Confirm New Password</string>
    <string name="CreatePasswordReEnterPasswordisnotsame">*Password Not Match</string>
    <string name="EnterFullName">Enter Full Name</string>
    <string name="EnterValidEmail">Enter Valid Email Address</string>
    <string name="EnterValidMobileNumber">Enter Valid Mobile Number</string>
    <string name="EnterValidOTP">Enter Valid OTP</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="select_your_choice">Select Your Choice</string>
    <string name="register_complaint">Register Complaint</string>
    <string name="subject_of_complaint">Subject Of Complaint</string>
    <string name="subject">Subject</string>
    <string name="select_subject">Select Subject</string>
    <string name="description_150">Description (Max 150 characters)</string>
    <string name="type_here">Type Here (Max 150 characters)</string>
    <string name="your_name">Your Name</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="description">Description</string>
    <string name="enter_message">Enter Message</string>
    <string name="type">Type</string>
    <string name="select_complaint_type">Select Priority Type</string>
    <string name="subject_of_feedback">Subject Of Feedback</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="select_priority_type">Select Priority</string>
    <string name="not_complaint_type">You Have No Order</string>
    <string name="complaint_id">Complaint ID</string>
    <string name="feedback_id">Feedback ID</string>
    <string name="feedback">Feedback</string>
    <string name="complaint">Complaint</string>
    <string name="Pleaseentertextormedia">Please Enter Text or Media</string>
    <string name="re_open">Re-Open</string>
    <string name="pending">Pending</string>
    <string name="resolved">Resolved</string>
    <string name="in_progress">In-Progress</string>
    <string name="inprogress">In Progress</string>
    <string name="close_conversation">Are you sure you want to close this conversation?</string>
    <string name="open_conversation">Are you sure you want to open this conversation?</string>
    <string name="upload_media">Upload Media</string>
    <string name="submit">Submit</string>
    <string name="valid_date">Date</string>
    <string name="status">Status</string>
    <string name="x_close">✕ Close</string>
    <string name="reopen">✓ Re-Open</string>
    <string name="typeColon">Type:</string>
    <string name="registration_dateColon">Registration Date:</string>
    <string name="subjectColon">Subject:</string>
    <string name="complaint_typeColon">Complaint Type:</string>
    <string name="message_by_admin">Message By CS</string>
    <string name="message_by_member">Message By User</string>
    <string name="admin_txt">Admin</string>
    <string name="member_txt">Member</string>
    <string-array name="type_array">
        <item>Register Complaint</item>
        <item>Submit Feedback</item>
    </string-array>
    <string-array name="type_array_priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="type_array_subject">
        <item>Order No</item>
        <item>Mislennious</item>
    </string-array>
    <string name="camera">Camera</string>
    <string name="order_no_with">Order No: </string>
    <string name="number_of_products">Number of Products:</string>
    <string name="date">Date:</string>
    <string name="total_amount">Total Amount:</string>
</resources>