<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:contentDescription="@string/home"
        app:actionViewClass="androidx.appcompat.widget.AppCompatImageButton"
        android:clickable="true"/>
    <item
        android:id="@+id/category"
        android:icon="@drawable/category_thin"
        android:title="@string/category"
        app:contentDescription="@string/category"
        app:actionViewClass="androidx.appcompat.widget.AppCompatImageButton"
        android:clickable="true"/>
    <item
        android:id="@+id/faq"
        android:icon="@drawable/faq"
        android:title="@string/faqs"
        app:contentDescription="@string/faqs"
        app:actionViewClass="androidx.appcompat.widget.AppCompatImageButton"
        android:clickable="true"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/user_linear"
        android:title="@string/profile"
        app:contentDescription="@string/profile"
        app:actionViewClass="androidx.appcompat.widget.AppCompatImageButton"
        android:clickable="true"/>

</menu>