<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login">


    <include
        android:id="@+id/back_button"
        layout="@layout/include_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toBottomOf="@+id/textTitleLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        style="@style/PrimaryEditText"
        android:hint="@string/mobile_number"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTitleMobileNumber"
        android:layout_marginTop="@dimen/_5sdp"
        android:maxLength="25"
        android:visibility="visible"
        android:backgroundTint="@color/_002630"
        />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitlePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toBottomOf="@+id/editTextMobileNumber"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        style="@style/PrimaryEditText"
        android:hint="@string/password"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTitlePassword"
        android:layout_marginTop="@dimen/_5sdp"
        android:maxLength="25"
        android:visibility="visible"
        android:backgroundTint="@color/_002630"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btResetPassword"
        style="@style/PrimaryButtonBlue"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="0dp"
        android:text="@string/reset_password"
        app:iconTint="@color/black"
        android:textColor="@color/black"
        android:backgroundTint="@color/_07FFFC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_marginTop="@dimen/_25sdp"
        app:cornerRadius="@dimen/_7sdp"
        android:visibility="visible"
        app:strokeColor="@color/app_color"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        />




    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleRequestOTP"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/request_otp"
        android:textColor="@color/_0098BD"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleMobileNumber"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:gravity="center"
        />



</androidx.constraintlayout.widget.ConstraintLayout>