<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <include
        android:id="@+id/top_bar_back"
        layout="@layout/top_bar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toBottomOf="@+id/textTitleLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextOldPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        style="@style/PrimaryEditText"
        android:hint="@string/old_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTitleOldPassword"
        android:layout_marginTop="@dimen/_5sdp"
        android:maxLength="25"
        android:visibility="visible"
        android:backgroundTint="@color/_002630"
        />





    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toBottomOf="@+id/editTextOldPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        style="@style/PrimaryEditText"
        android:hint="@string/new_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTitleNewPassword"
        android:layout_marginTop="@dimen/_5sdp"
        android:maxLength="25"
        android:visibility="visible"
        android:backgroundTint="@color/_002630"
        />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/nunitosans_semibold"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        style="@style/PrimaryEditText"
        android:hint="@string/confirm_new_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTitleConfirmNewPassword"
        android:layout_marginTop="@dimen/_5sdp"
        android:maxLength="25"
        android:visibility="visible"
        android:backgroundTint="@color/_002630"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        style="@style/PrimaryButtonBlue"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="0dp"
        android:text="@string/confirm"
        app:iconTint="@color/black"
        android:textColor="@color/black"
        android:backgroundTint="@color/_07FFFC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmNewPassword"
        android:layout_marginTop="@dimen/_25sdp"
        app:cornerRadius="@dimen/_7sdp"
        android:visibility="visible"
        app:strokeColor="@color/app_color"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        />






</androidx.constraintlayout.widget.ConstraintLayout>