<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_7sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@drawable/bg_all_round_franchise"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivIcon"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:theme="@style/RoundCorner5"
                app:layout_constraintDimensionRatio="H,1:1.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/place_image" />



        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_7sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutLeft"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_no_with"
                android:textColor="@color/_2A3740"
                android:textSize="@dimen/_11sdp"
                app:fontFamily="@font/nunitosans_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textNoOfOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/number_of_products"
                android:textColor="@color/_484848"
                android:textSize="@dimen/_11sdp"
                app:fontFamily="@font/nunitosans_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitle"
                android:layout_marginTop="@dimen/_3sdp"
                tools:ignore="HardcodedText" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/date"
                android:textColor="@color/_484848"
                android:textSize="@dimen/_11sdp"
                app:fontFamily="@font/nunitosans_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNoOfOrders"
                android:layout_marginTop="@dimen/_3sdp"
                tools:ignore="HardcodedText" />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/total_amount"
                android:textColor="@color/_484848"
                android:textSize="@dimen/_11sdp"
                app:fontFamily="@font/nunitosans_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDate"
                android:layout_marginTop="@dimen/_3sdp"
                tools:ignore="HardcodedText" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>




